# Product_Board

./: .gitignore  Dockerfile  celery_app.py  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 0504861ea83c_.py  4cde5f6e0f31_.py  64ad9b6afcf0_.py  86679176d6d0_.py  9dafaa068554_.py  b5b9b0891dd7_.py  bea78b1123a6_initial_commit.py  dc3d79b0cdd9_delete_on_cascade_for_org_and_userid.py  f456bf688f65_update.py  fac2278d8340_.py
app/api/v1/: comments.py  feedback.py  invitation.py  organizations.py  products.py  users.py
app/core/: config.py  db.py  dep.py  email.py  error_handlers.py  exceptions.py  security.py
app/models/: __init__.py  comments.py  enums.py  feedback.py  feedback_votes.py  invitation.py  organization.py  organization_membership.py  permission.py  product_assignments.py  products.py  role.py  role_permission.py  user.py  users.py  votes.py
app/repository/: auth.py  comment_repo.py  feedback_repository.py  invitation_repo.py  organization_membership_repository.py  organization_repository.py  product_repository.py  role_repo.py  user_repository.py
app/schemas/: comment.py  common.py  feedback.py  invitation.py  organization.py  product.py  users.py
app/seed/: __main__.py  core.py
app/service/: comment_service.py  feedback_service.py  invitation_service.py  organization_service.py  product_service.py  role_service.py  user_service.py
app/workers/: email_tasks.py  notification_tasks.py
tests/: conftest.py
tests/unit/service/: test_user_service.py
