[project]
name = "product-board"
version = "0.1.0"
description = "Product Board"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.11.0",
    "asyncpg>=0.30.0",
    "bcrypt==4.0.1",
    "bump-pydantic>=0.8.0",
    "celery[redis]>=5.6.0",
    "certifi==2025.11.12",
    "click==8.1.8",
    "dnspython==2.7.0",
    "email-validator==2.3.0",
    "exceptiongroup==1.3.0",
    "fastapi==0.121.3",
    "fastapi-cli==0.0.16",
    "fastapi-cloud-cli==0.5.1",
    "fastar==0.6.0",
    "greenlet>=3.2.4",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httptools==0.7.1",
    "httpx==0.28.1",
    "idna==3.11",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.3",
    "mdurl==0.1.2",
    "orjson==3.11.4",
    "passlib==1.7.4",
    "psycopg[binary]>=3.2.13",
    "pydantic==2.12.4",
    "pydantic-core==2.41.5",
    "pydantic-extra-types==2.10.6",
    "pydantic-settings==2.11.0",
    "pygments==2.19.2",
    "pyjwt>=2.10.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-dotenv==1.2.1",
    "python-multipart==0.0.20",
    "pyyaml==6.0.3",
    "rich==14.2.0",
    "rich-toolkit==0.16.0",
    "rignore==0.7.6",
    "sentry-sdk==2.45.0",
    "shellingham==1.5.4",
    "sniffio==1.3.1",
    "sqlmodel>=0.0.27",
    "starlette==0.49.3",
    "tomli==2.3.0",
    "typer==0.20.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "ujson==5.11.0",
    "urllib3==2.5.0",
    "uvicorn==0.38.0",
    "uvloop==0.22.1",
    "watchfiles==1.1.1",
    "websockets==15.0.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra"
markers = [
  "unit: fast, pure-python unit tests",
  "integration: tests hitting real DB/external systems",
  "e2e: end-to-end flows through the API",
]
asyncio_mode = "auto"
pythonpath = ["."]
